phew, glad I figured out that fix for scrollbar triggered layout shift

--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -230,7 +230,7 @@
             transform: translateX(0);
         }    
         & ul {
-            padding-left: max(36vw, 2rem);
+            padding-left: max(10vw, 2rem);
             padding-right: 2rem;
         }
     }
@@ -284,8 +284,8 @@
 }
 @media (min-width: var.$breakpoint) { 
     .nav__links {
-        width: 50vw;
-        transform: translateX(-50vw);
+        width: 30vw;
+        transform: translateX(-30vw);
         &--expanded {
             transform: translateX(0);
             box-shadow: 0 0 6vw var(--foreground);
