--- a/sass/_elements.scss
+++ b/sass/_elements.scss
@@ -19,7 +19,9 @@ html {
     overflow-x: hidden;
     background: var(--background);
     color: var(--foreground);
+    width:100vw;
 }
+
 footer {
     padding-top: 20vh;
 }
